--- a/realtime/pom.xml
+++ b/realtime/pom.xml
@@ -5,6 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>realtime</artifactId>
+    <groupId>cn.bigdatabc</groupId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <java.version>1.8</java.version>
